--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,15 @@
-FROM ubuntu
-RUN apt-get update
-RUN apt-get install apache2 -y
-ADD  . /var/www/html
-ENTRYPOINT apachectl -D FOREGROUND
+FROM ubuntu:22.04
 
+# Install Apache
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y apache2 && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Copy website files
+COPY . /var/www/html/
+
+# Expose Apache default port
+EXPOSE 80
+
+# Run Apache in the foreground
+ENTRYPOINT ["apachectl", "-D", "FOREGROUND"]
